--- a/keras_to_tensorflow.ipynb
+++ b/keras_to_tensorflow.ipynb
@@ -48,7 +48,7 @@
     "import os.path as osp\n",
     "from keras import backend as K\n",
     "\n",
-    "output_fld = input_fld + 'tensorflow_model/'\n",
+    "output_fld = input_fld + '/tensorflow_model/'\n",
     "if not os.path.isdir(output_fld):\n",
     "    os.mkdir(output_fld)\n",
     "weight_file_path = osp.join(input_fld, weight_file)"
